Must use 'meteor add email' | Confirmation emailing system finished

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -8,6 +8,6 @@
   ],
 
   "automatedEmailInfo": [
-    { "email": "gemshawaii19", "password": "Manoa#2019"}
+    { "email": "gemshawaii19", "password": "UHManoa2019"}
   ]
 }
