--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -4,7 +4,9 @@
   ],
 
   "defaultData": [
-    { "name": "Boogie Board", "quantity": 2, "owner": "wileyb@hawaii.edu", "condition": "excellent" }
+    { "name": "Boogie Board", "quantity": 2, "owner": "wileyb@hawaii.edu", "condition": "excellent",
+      "howDidYouHearAboutUs": [],"otherHDYHA": ""
+    }
   ],
 
   "automatedEmailInfo": [
