--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -1,10 +1,10 @@
 {
   "defaultAccounts": [
+    { "email": "admin@foo.com", "password": "changeme", "role": "admin" },
     { "email": "wileyb@hawaii.edu", "password": "changeme", "role": "admin" }
   ],
 
   "defaultData": [
-    { "name": "Boogie Board", "quantity": 2, "owner": "wileyb@hawaii.edu", "condition": "excellent" }
   ],
 
   "automatedEmailInfo": [
