--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -2,6 +2,7 @@
   "defaultAccounts": [
     { "email": "admin@foo.com", "password": "changeme", "role": "admin" },
     { "email": "wileyb@hawaii.edu", "password": "changeme", "role": "admin" }
+    { "email": "default@foo.com", "password":  "test"}
   ],
 
   "defaultData": [
