--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.5.4",
+    "@react-pdf/renderer": "^1.6.8",
     "classnames": "^2.2.6",
     "core-js": "^3.1.4",
     "graphql": "^0.8.2",
