--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "@react-pdf/renderer": "^1.6.8",
     "classnames": "^2.2.6",
     "core-js": "^3.1.4",
+    "export-to-csv": "^0.2.1",
     "graphql": "^0.8.2",
     "meteor-node-stubs": "^0.4.1",
     "prop-types": "^15.7.2",
