--- a/app/package.json
+++ b/app/package.json
@@ -26,13 +26,14 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.2",
+    "babel-preset-es2015-node5": "^1.2.0",
     "eslint": "^6.0.1",
-    "eslint-utils": ">=1.4.1",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-meteor": "^5.1.0",
-    "eslint-plugin-react": "^7.14.2"
+    "eslint-plugin-react": "^7.14.2",
+    "eslint-utils": ">=1.4.1"
   },
   "scripts": {
     "start": "meteor --no-release-check --settings ../config/settings.development.json",
