Changed NavBar to reflect current roles of logged in user
- Created 'contractor' role and created role assignment in account creation.

- Changed NavBar to reflect current logged in user's role. For example, if the user logged in is an admin, the 'My Application' section will not appear.

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -3,7 +3,9 @@
     { "email": "admin@foo.com", "password": "changeme", "role": "admin" },
     { "email": "wileyb@hawaii.edu", "password": "changeme", "role": "admin" },
     { "email":  "ryoabs@hawaii.edu", "password":  "changeme"},
-    { "email": "default@foo.com", "password":  "test"}
+    { "email": "default@foo.com", "password":  "test",
+      "role": "contractor"
+    }
   ],
 
   "defaultData": [
