Removed unnessary tabs/urls for admin users

--- a/app/.eslintrc
+++ b/app/.eslintrc
@@ -55,5 +55,9 @@
   },
   "globals": {
     "Assets": true // Meteor disallows importing of Assets, see https://docs.meteor.com/api/assets.html
+  },
+  "env": {
+    "browser": true,
+    "jquery": true
   }
 }
