changed jason file

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -3,6 +3,7 @@
     { "email": "admin@foo.com", "password": "changeme", "role": "admin" },
     { "email": "wileyb@hawaii.edu", "password": "changeme", "role": "admin" },
     { "email":  "ryoabs@hawaii.edu", "password":  "changeme"},
+    { "email":  "john@foo.com", "password":  "changeme"},
     { "email": "default@foo.com", "password":  "test",
       "role": "contractor"
     }
