--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -2,7 +2,7 @@
   "defaultAccounts": [
     { "email": "admin@foo.com", "password": "changeme", "role": "admin" },
     { "email": "wileyb@hawaii.edu", "password": "changeme", "role": "admin" },
-    { "email":  "ryoabs@hawaii.edu", "password":  "changeme"},
+    { "email":  "ryoabs@hawaii.edu", "password":  "changeme", "role": "user"},
     { "email":  "john@foo.com", "password":  "changeme"},
     { "email":  "trey.sumida@gmail.com", "password":  "changeme"},
     { "email": "default@foo.com", "password":  "test",
