--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@babel/runtime": "^7.5.4",
     "@react-pdf/renderer": "^1.6.8",
+    "bcrypt": "^3.0.7",
     "classnames": "^2.2.6",
     "core-js": "^3.1.4",
     "export-to-csv": "^0.2.1",
